@@ -53,10 +53,10 @@
     </modules>
 
     <properties>
-        <revision>2.0.4</revision>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <oap.version>4.13.7</oap.version>
+        <revision>2.1.0</revision>
+        <maven.compiler.source>12</maven.compiler.source>
+        <maven.compiler.target>12</maven.compiler.target>
+        <oap.version>4.19.3</oap.version>
         <lombok.version>1.18.6</lombok.version>
     </properties>
 
@@ -74,6 +74,7 @@
                     <compilerArgs>
                         <arg>-parameters</arg>
                         <arg>-Xlint:unchecked</arg>
+                        <arg>--enable-preview</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
